--- a/client/app.html
+++ b/client/app.html
@@ -1,54 +1,56 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Banglore Home Price Prediction</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="app.js"></script>
-	<link rel="stylesheet" href="app.css">
+    <meta charset="UTF-8">
+    <title>Bangalore Home Price Predictor</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<div class="img"></div>
-<form class="form">
-	<h2>Area (Square Feet)</h2>
-    <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
-	<h2>BHK</h2>
-	<div class="switch-field">
-		<input type="radio" id="radio-bhk-1" name="uiBHK" value="1"/>
-		<label for="radio-bhk-1">1</label>
-		<input type="radio" id="radio-bhk-2" name="uiBHK" value="2" checked/>
-		<label for="radio-bhk-2">2</label>
-		<input type="radio" id="radio-bhk-3" name="uiBHK" value="3"/>
-		<label for="radio-bhk-3">3</label>
-		<input type="radio" id="radio-bhk-4" name="uiBHK" value="4"/>
-		<label for="radio-bhk-4">4</label>
-		<input type="radio" id="radio-bhk-5" name="uiBHK" value="5"/>
-		<label for="radio-bhk-5">5</label>
-	</div>
-	</form>
-<form class="form">
-	<h2>Bath</h2>
-	<div class="switch-field">
-		<input type="radio" id="radio-bath-1" name="uiBathrooms" value="1"/>
-		<label for="radio-bath-1">1</label>
-		<input type="radio" id="radio-bath-2" name="uiBathrooms" value="2" checked/>
-		<label for="radio-bath-2">2</label>
-		<input type="radio" id="radio-bath-3" name="uiBathrooms" value="3"/>
-		<label for="radio-bath-3">3</label>
-		<input type="radio" id="radio-bath-4" name="uiBathrooms" value="4"/>
-		<label for="radio-bath-4">4</label>
-		<input type="radio" id="radio-bath-5" name="uiBathrooms" value="5"/>
-		<label for="radio-bath-5">5</label>
-	</div>
-		<h2>Location</h2>
-	<div>
-  <select class="location" name="" id="uiLocations">
-    <option value="" disabled="disabled" selected="selected">Choose a Location</option>
-		<option>Electronic City</option>
-        <option>Rajaji Nagar</option>
-  </select>
+
+<div class="card">
+    <h1>🏠 Home Price Predictor</h1>
+    <p class="subtitle">AI-powered Bangalore real estate estimation</p>
+
+    <div class="field">
+        <label>Area (sqft)</label>
+        <input id="uiSqft" type="number" placeholder="e.g. 1200">
+    </div>
+
+    <div class="field">
+        <label>BHK</label>
+        <div class="options">
+            <label><input type="radio" name="uiBHK" value="1"> 1</label>
+            <label><input type="radio" name="uiBHK" value="2" checked> 2</label>
+            <label><input type="radio" name="uiBHK" value="3"> 3</label>
+            <label><input type="radio" name="uiBHK" value="4"> 4</label>
+        </div>
+    </div>
+
+    <div class="field">
+        <label>Bathrooms</label>
+        <div class="options">
+            <label><input type="radio" name="uiBathrooms" value="1"> 1</label>
+            <label><input type="radio" name="uiBathrooms" value="2" checked> 2</label>
+            <label><input type="radio" name="uiBathrooms" value="3"> 3</label>
+            <label><input type="radio" name="uiBathrooms" value="4"> 4</label>
+        </div>
+    </div>
+
+    <div class="field">
+        <label>Location</label>
+        <select id="uiLocations"></select>
+    </div>
+
+    <button onclick="onClickedEstimatePrice()">Predict Price</button>
+
+    <div id="uiEstimatedPrice" class="result"></div>
 </div>
-	<button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
-	<div id="uiEstimatedPrice" class="result">	<h2></h2> </div>
+
+<script src="app.js"></script>
 </body>
 </html>
